removed white-space: nowrap from td css to fix dashboard display, if this breaks things elsewhere consider making case-specific css vs changing the top level td tag

--- a/app/assets/stylesheets/administrate/base/_tables.scss
+++ b/app/assets/stylesheets/administrate/base/_tables.scss
@@ -22,6 +22,6 @@ td {
   font-variant-numeric: lining-nums, tabular-nums;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  // white-space: nowrap;
   word-wrap: normal;
 }
